# course-graphics-2021

./: README.md
task-6/: task-6.txt
task-6/cpp-src/: CMakeLists.txt
task-6/cpp-src/lib/glfw-3.3.4/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
task-6/cpp-src/lib/glfw-3.3.4/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
task-6/cpp-src/lib/glfw-3.3.4/src/: Makefile  cmake_install.cmake
task-6/cpp-src/lib/glfw-3.3.4/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
task-6/cpp-src/src/: Object3D.cpp  Object3D.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Shader.cpp  Shader.h  main.cpp
task-6/cpp-src/src/geometries/: BoxGeometry.cpp  BoxGeometry.h  BufferGeometry.cpp  BufferGeometry.h  ConeGeometry.h  ConicalSpiralGeometry.cpp  ConicalSpiralGeometry.h  CylinderGeometry.cpp  CylinderGeometry.h  DodecahedronGeometry.h  IcosahedronGeometry.h  OctahedronGeometry.h  PolyhedronGeometry.cpp  PolyhedronGeometry.h  SphereGeometry.cpp  SphereGeometry.h  TetrahedronGeometry.h  TorusGeometry.cpp  TorusGeometry.h  TorusKnotGeometry.cpp  TorusKnotGeometry.h
task-6/cpp-src/src/shaders/: main.fs  main.vs  normals.fs  normals.vs
task-6/web-src/: index.html  index.three.html  index.webgl.html
